Tests/JTran.Transform.UnitTests/Test Transforms/SyntaxErrors/variable2.jtran
{
    "#variable(bob)": 
    {
      "name":  "#what(about(bob))"
    },

    "#foreach(Customers, Customers)":
    {
        "LastName":    "#(Surname)",
        "FirstName":   "#($bob.name)",
        "Age":         "#(Age)",
        "Address":     "#(Address)"
    }
}